[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scripts/lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/waitingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/titleScreen.tscn" type="PackedScene" id=4]

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 1, 400, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_random = 0.5

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Space" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Stars" type="Particles2D" parent="Space"]
modulate = Color( 2, 2, 2, 1 )
material = SubResource( 6 )
position = Vector2( 1284, 360 )
amount = 80
lifetime = 40.0
preprocess = 20.0
speed_scale = 0.84
visibility_rect = Rect2( -10, -360, 10, 720 )
process_material = SubResource( 4 )

[node name="TitleScreen" parent="." instance=ExtResource( 4 )]

[node name="Name" parent="TitleScreen" index="1"]
anchor_left = 0.5
anchor_top = 0.235
anchor_right = 0.5
anchor_bottom = 0.235
margin_left = -174.5
margin_top = -18.8
margin_right = 174.5
margin_bottom = 19.2

[node name="WaitingRoom" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="text_changed" from="TitleScreen/Name" to="." method="_on_NameTextBox_text_changed"]
[connection signal="pressed" from="TitleScreen/CreateBtn" to="." method="_on_CreateBtn_pressed"]
[connection signal="pressed" from="TitleScreen/JoinBtn/EnterArrow" to="." method="_on_JoinBtn_pressed"]

[editable path="TitleScreen"]
[editable path="WaitingRoom"]
